--- a/style.css
+++ b/style.css
@@ -6,20 +6,20 @@ body {
   cursor: pointer;
 }
 
-body {
-  /* columns: #34495e;; */
-  color: #3513ce;
+h1 {
+  color: #34495e;
+  transition: color 0.5s ease-in-out;
 }
 
 .clicked {
-  color: #6d7992;
+  color: #7f8c;
 }
 
 .form,
-.greetings{
+.greetings {
   display: none;
 }
 
-.showing{
+.showing {
   display: block;
 }
